--- a/index.html
+++ b/index.html
@@ -89,6 +89,16 @@
       -ms-overflow-style: none;
       scrollbar-width: none;
     }
+
+    /* Smooth Theme Transition */
+    .theme-transitioning,
+    .theme-transitioning *,
+    .theme-transitioning *::before,
+    .theme-transitioning *::after {
+      transition: background-color 750ms cubic-bezier(0.4, 0, 0.2, 1) !important;
+      transition-property: background-color, border-color, color, fill, stroke, box-shadow !important;
+      transition-delay: 0s !important;
+    }
   </style>
   <script type="importmap">
 {
