--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="OOA7Yjgb8EynLfTvXs47a0bh10JSKkhZWvrRHDgaTck" />
   <title>Home Service Kuwait - Smart Home & Security Experts</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
